# zlib-cli

./: LICENSE  README.md  pyproject.toml
src/zlib_cli/: __init__.py  cli.py  client.py  config.py
