[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zlib-cli"
version = "0.1.0"
description = "Z-Library CLI - search and download ebooks from the terminal"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Liangquan Zhou", email = "jluzlq@163.com" }]
readme = "README.md"
keywords = ["zlibrary", "ebooks", "cli", "download"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "zlibrary",
    "click>=8.0",
    "rich>=13.0",
    "aiohttp",
    "aiohttp-socks",
]

[project.urls]
Repository = "https://github.com/liangquanzhou/zlib-cli"

[project.scripts]
zl = "zlib_cli.cli:main"
